scrollbar fix on chrome, sign-up css updates

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
 
 html,
 body {
-  height: 100%;
+  /* height: 100%; */
   font-family: "Work Sans", sans-serif;
 }
 
